# rusty-chat

./: .gitignore  Cargo.toml  README.md  app.css  config.toml  default_models.toml  default_settings.toml  deploy_demo.sh  examples.toml  index.html
src/: app.rs  config.rs  main.rs  state.rs  utils.rs
src/app/: conversation.rs  conversation_parameters.rs  home.rs  mod.rs  settings.rs
