[package]
name = "rusty_chat"
version = "0.1.0"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
thiserror = "1"
leptos = { version = "0.6", features = ["nightly", "csr"] }
leptos_meta = { version = "0.6", features = ["nightly", "csr"] }
leptos_router = { version = "0.6", features = ["nightly", "csr"] }
leptos-use = { version = "0.9", git = "https://github.com/Synphonyte/leptos-use.git", features = ["serde"] }
console_error_panic_hook = "0.1"
wasm-logger = "0.2.0"
gloo-utils = "0.2"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
derive_more = "0.99"
web-sys = { version = "0.3", features = ["HtmlInputElement", "ScrollIntoViewOptions", "ScrollLogicalPosition", "Element"] }
futures = "0.3"
markdown = "1.0.0-alpha.16"
hf-textgen = { git = "https://github.com/jgraef/hf-textgen.git" }
